# thess-geo-analytics

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENCE  Makefile  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml  tests.yml
config/: pipeline.thess.yaml
docs/: 01-extract-aoi.md  02-scene-catalog.md  03-assets-manifest.md  04-timestamp-aggregation.md
notebooks/: 01_aoi.ipynb  02_catalog_search.ipynb  03_assets_manifest.ipynb  03_monthly_composite.ipynb  04_validate_ndvi_scene.ipynb  05_validate_ndvi_monthly_composite.ipynb  06_validate_ndvi_period_stats.ipynb  thess_outputs_explorer.ipynb
notebooks_training/data/: aois.geojson
src/thess_geo_analytics/: ExtractGeography.py  NutsExtractor.py  RepoPaths.py  S3AssetDownloader.py  make_aoi_from_nuts.py
src/thess_geo_analytics/builders/: AoiBuilder.py  AssetsManifestBuilder.py  BaseSceneCatalogBuilder.py  DownsampleAggregatedTimestampsBuilder.py  MonthlyCompositeBuilder.py  NdviAggregatedCompositeBuilder.py  NdviAnomalyMapsBuilder.py  NdviSceneCatalogBuilder.py  SceneCatalogBuilder.py  TimestampsAggregationBuilder.py  VvVhSceneCatalogBuilder.py
src/thess_geo_analytics/core/: HttpClient.py  constants.py  mode_settings.py  params.py  pipeline_config.py  settings.py  step_paths.py
tables/: ndvi_period_stats.csv
tests/manual/: DownsampleAggregationViewer.py  SyntheticNdviViewer.py  TimestampAggregationViewer.py  VisualizeSceneCatalogTestData.py  qa_visualize_cogs.py
tests/mocks/: FakeCdseSceneCatalogService.py  MockCdseAssetDownloader.py  MockCdseSceneCatalogService.py  MockCdseStacService.py  MockNutsService.py  MockStacAssetResolver.py
tests/scripts/: coverage_test.py  make_thin_catalog_fixture.py  smoke_TileSelector_fixture.py  test_TestTileSelectorRegularSeries.py  tmp_test1.py  tmp_test2.py  upload_7d_features.py  upload_to_gcs.py
(+136 files in other folders)
